feat(all): meta updates, dep bumps

--- a/src/main/resources/assets/rightclickharvest/lang/en_us.json
+++ b/src/main/resources/assets/rightclickharvest/lang/en_us.json
@@ -1,5 +1,5 @@
 {
   "rightclickharvest.midnightconfig.title": "Right Click Harvest Config",
   "rightclickharvest.midnightconfig.requireHoe": "Require Hoe",
-  "rightclickharvest.midnightconfig.requireHoe.tooltip": "Only allow right click harvesting if the player is holding a hoe"
+  "rightclickharvest.midnightconfig.requireHoe.tooltip": "Only allow harvesting a crop if the player is holding a hoe"
 }
