feat(config): update to jamlib 0.0.5

--- a/src/main/resources/assets/rightclickharvest/lang/en_us.json
+++ b/src/main/resources/assets/rightclickharvest/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-  "rightclickharvest.midnightconfig.title": "Right Click Harvest Config",
-  "rightclickharvest.midnightconfig.requireHoe": "Require Hoe",
-  "rightclickharvest.midnightconfig.requireHoe.tooltip": "Only allow harvesting a crop if the player is holding a hoe"
+  "rightclickharvest.jamlibconfig.title": "Right Click Harvest Config",
+  "rightclickharvest.jamlibconfig.requireHoe": "Require Hoe",
+  "rightclickharvest.jamlibconfig.requireHoe.tooltip": "Only allow harvesting a crop if the player is holding a hoe in their hand."
 }
