--- a/common/src/main/resources/assets/rightclickharvest/lang/ru_ru.json
+++ b/common/src/main/resources/assets/rightclickharvest/lang/ru_ru.json
@@ -1,7 +1,22 @@
 {
   "config.rightclickharvest.title": "Настройки Right Click Harvest",
-  "config.rightclickharvest.requireHoe": "Требовать мотыгу",
-  "config.rightclickharvest.requireHoe.tooltip": "Позволять собирать только определённые культуры (например, пшеницу, морковь), если игрок держит в руках мотыгу.",
+  "config.rightclickharvest.requireHoe": "Требования мотыги",
+  "config.rightclickharvest.requireHoe.tooltip": "Разрешает игроку собирать растения только с мотыгой в руке",
   "config.rightclickharvest.harvestInRadius": "Собирать в радиусе",
-  "config.rightclickharvest.harvestInRadius.tooltip": "Позволять мотыгам разных уровней собирать несколько блоков в радиусе. Требует `requireHoe`."
+  "config.rightclickharvest.harvestInRadius.tooltip": "Мотыга лучшего уровня собирает с большим радиусом. Необходим параметр `Требования мотыги` значение Да.",
+  "config.rightclickharvest.hungerLevel": "Уровень сытости",
+  "config.rightclickharvest.hungerLevel.tooltip": "Использования сытости при собирании растений.",
+  "config.rightclickharvest.hungerLevel.none": "Нет",
+  "config.rightclickharvest.hungerLevel.low": "Низкий",
+  "config.rightclickharvest.hungerLevel.normal": "Нормальный",
+  "config.rightclickharvest.hungerLevel.high": "Высокий",
+  "config.rightclickharvest.discord": "Чат в дискорде",
+  "config.rightclickharvest.github": "Жалоба о багах в гитхаб",
+  "config.rightclickharvest.modrinth": "Смотрите за обновлениями на модринфе",
+  "tag.block.rightclickharvest.blacklist": "Черный список собирания",
+  "tag.block.rightclickharvest.hoe_never_required": "Мотыга не нужна",
+  "tag.block.rightclickharvest.radius_harvest_blacklist": "Черный список радиуса собирания",
+  "tag.item.rightclickharvest.low_tier_hoes": "Низкий уровень мотыги",
+  "tag.item.rightclickharvest.mid_tier_hoes": "Средний уровень мотыги",
+  "tag.item.rightclickharvest.high_tier_hoes": "Высокий уровень мотыги"
 }
