--- a/common/src/main/resources/assets/rightclickharvest/lang/ru_ru.json
+++ b/common/src/main/resources/assets/rightclickharvest/lang/ru_ru.json
@@ -1,22 +1,23 @@
 {
-  "config.rightclickharvest.title": "Настройки Right Click Harvest",
+  "config.rightclickharvest.title": "Настройки сбора урожая по ПКМ",
   "config.rightclickharvest.requireHoe": "Требования мотыги",
   "config.rightclickharvest.requireHoe.tooltip": "Разрешает игроку собирать растения только с мотыгой в руке",
   "config.rightclickharvest.harvestInRadius": "Собирать в радиусе",
-  "config.rightclickharvest.harvestInRadius.tooltip": "Мотыга лучшего уровня собирает с большим радиусом. Необходим параметр `Требования мотыги` значение Да.",
+  "config.rightclickharvest.harvestInRadius.tooltip": "Используйте мотыги разных уровней для уборки нескольких блоков в радиусе. Требуется, чтобы для параметр `Требование мотыги` был включен.",
   "config.rightclickharvest.hungerLevel": "Уровень сытости",
-  "config.rightclickharvest.hungerLevel.tooltip": "Использования сытости при собирании растений.",
+  "config.rightclickharvest.hungerLevel.tooltip": "Использования сытости при сборе урожая.",
   "config.rightclickharvest.hungerLevel.none": "Нет",
   "config.rightclickharvest.hungerLevel.low": "Низкий",
   "config.rightclickharvest.hungerLevel.normal": "Нормальный",
   "config.rightclickharvest.hungerLevel.high": "Высокий",
-  "config.rightclickharvest.discord": "Чат в дискорде",
-  "config.rightclickharvest.github": "Жалоба о багах в гитхаб",
-  "config.rightclickharvest.modrinth": "Смотрите за обновлениями на модринфе",
-  "tag.block.rightclickharvest.blacklist": "Черный список собирания",
-  "tag.block.rightclickharvest.hoe_never_required": "Мотыга не нужна",
-  "tag.block.rightclickharvest.radius_harvest_blacklist": "Черный список радиуса собирания",
-  "tag.item.rightclickharvest.low_tier_hoes": "Низкий уровень мотыги",
-  "tag.item.rightclickharvest.mid_tier_hoes": "Средний уровень мотыги",
-  "tag.item.rightclickharvest.high_tier_hoes": "Высокий уровень мотыги"
+  "config.rightclickharvest.discord": "Чат в Discord",
+  "config.rightclickharvest.github": "Сообщайте об ошибках и запрашивайте новые функции на GitHub",
+  "config.rightclickharvest.modrinth": "Следите за обновлениями на Modrinth",
+  "text.rightclickharvest.use_a_hoe_warning": "Сбор урожая по ПКМ настроен на использование мотыги. Держите мотыгу или установите %s на %s в настройках, чтобы отключить это требование. Это сообщение будет показано только один раз.",
+  "tag.block.rightclickharvest.blacklist": "Чёрный список сбора",
+  "tag.block.rightclickharvest.hoe_never_required": "Мотыга не требуется",
+  "tag.block.rightclickharvest.radius_harvest_blacklist": "Чёрный список радиуса сбора",
+  "tag.item.rightclickharvest.low_tier_hoes": "Мотыги низкого уровня",
+  "tag.item.rightclickharvest.mid_tier_hoes": "Мотыги среднего уровня",
+  "tag.item.rightclickharvest.high_tier_hoes": "Мотыги высокого уровня"
 }
