--- a/common/src/main/resources/assets/rightclickharvest/lang/en_us.json
+++ b/common/src/main/resources/assets/rightclickharvest/lang/en_us.json
@@ -2,6 +2,8 @@
   "config.rightclickharvest.title": "Right Click Harvest Config",
   "config.rightclickharvest.requireHoe": "Require Hoe",
   "config.rightclickharvest.requireHoe.tooltip": "Only allow harvesting certain crops (e.g. wheat, carrots) if the player is holding a hoe in their hand.",
+  "config.rightclickharvest.showServerWarning": "Show Server Warning",
+  "config.rightclickharvest.showServerWarning.tooltip": "Whether to show the warning about playing on a server without RightClickHarvest installed.",
   "config.rightclickharvest.harvestInRadius": "Harvest in Radius",
   "config.rightclickharvest.harvestInRadius.tooltip": "Make hoes of different tiers harvest multiple blocks in a radius. Requires `requireHoe` to be set to true.",
   "config.rightclickharvest.hungerLevel": "Hunger Level",
@@ -14,6 +16,7 @@
   "config.rightclickharvest.github": "Report bugs and request new features on GitHub",
   "config.rightclickharvest.modrinth": "Check for updates on Modrinth",
   "text.rightclickharvest.use_a_hoe_warning": "RightClickHarvest is configured to require a hoe - hold a hoe or set %s to %s in the config to disable this requirement. This message will only be shown once.",
+  "text.rightclickharvest.install_on_server_warning": "RightClickHarvest is not installed on the server. To function, the mod needs to be installed on the server, as well as optionally on the client. Set %s to %s in the config to disable this message.",
   "tag.block.rightclickharvest.blacklist": "Harvest Blacklist",
   "tag.block.rightclickharvest.hoe_never_required": "Hoe Not Required",
   "tag.block.rightclickharvest.radius_harvest_blacklist": "Radius Harvest Blacklist",
