feat: implement xp gain/loss

--- a/common/src/main/resources/assets/rightclickharvest/lang/en_us.json
+++ b/common/src/main/resources/assets/rightclickharvest/lang/en_us.json
@@ -12,6 +12,11 @@
   "config.rightclickharvest.hungerLevel.low": "Low",
   "config.rightclickharvest.hungerLevel.normal": "Normal",
   "config.rightclickharvest.hungerLevel.high": "High",
+  "config.rightclickharvest.experienceType": "XP Type",
+  "config.rightclickharvest.experienceType.tooltip": "Whether XP should be taken or given for harvesting.",
+  "config.rightclickharvest.experienceType.none": "None",
+  "config.rightclickharvest.experienceType.cost": "Cost XP",
+  "config.rightclickharvest.experienceType.reward": "Reward XP",
   "config.rightclickharvest.discord": "Chat on Discord",
   "config.rightclickharvest.github": "Report bugs and request new features on GitHub",
   "config.rightclickharvest.modrinth": "Check for updates on Modrinth",
